; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_tty_io.c_tty_standard_install.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_tty_io.c_tty_standard_install.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_driver = type { %struct.tty_struct** }
%struct.tty_struct = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tty_standard_install(%struct.tty_driver* %0, %struct.tty_struct* %1) #0 {
  %3 = alloca %struct.tty_driver*, align 8
  %4 = alloca %struct.tty_struct*, align 8
  store %struct.tty_driver* %0, %struct.tty_driver** %3, align 8
  store %struct.tty_struct* %1, %struct.tty_struct** %4, align 8
  %5 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %6 = call i32 @tty_init_termios(%struct.tty_struct* %5)
  %7 = load %struct.tty_driver*, %struct.tty_driver** %3, align 8
  %8 = call i32 @tty_driver_kref_get(%struct.tty_driver* %7)
  %9 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %10 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 8
  %13 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %14 = load %struct.tty_driver*, %struct.tty_driver** %3, align 8
  %15 = getelementptr inbounds %struct.tty_driver, %struct.tty_driver* %14, i32 0, i32 0
  %16 = load %struct.tty_struct**, %struct.tty_struct*** %15, align 8
  %17 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %18 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds %struct.tty_struct*, %struct.tty_struct** %16, i64 %19
  store %struct.tty_struct* %13, %struct.tty_struct** %20, align 8
  ret i32 0
}

declare dso_local i32 @tty_init_termios(%struct.tty_struct*) #1

declare dso_local i32 @tty_driver_kref_get(%struct.tty_driver*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
